package de.uol.swp.common.game;

import java.io.Serializable;

/**
 * Interface to unify game objects
 *
 * <p>This is an Interface to allow for multiple types of game objects since it is possible that not
 * every client has to have every information of the game.
 *
 * @author Maria Eduarda Costa Leite Andrade
 * @since 2023-05-01
 */
public interface Game extends Serializable {}
