package de.uol.swp.server.gamelogic.cards;

/**
 * Enum for the direction
 *
 * @author Tommy Dang
 * @since 2023-01-24
 */
public enum Direction {
    Right,
    Left
}
