package de.uol.swp.server.gamelogic.tiles.enums;

/**
 * @author
 * @see
 * @since
 */
public enum CardinalDirection {
    North,
    East,
    South,
    West,
}
